--- a/odoo.conf
+++ b/odoo.conf
@@ -2,6 +2,7 @@
 ;addons_path = /Users/iwan/Documents/GEMBEL/PEMPROV_DKI/sourceOdoo/odoo-12.0/addons
 ;data_dir = /Users/iwan/Documents/GEMBEL/PEMPROV_DKI/sourceOdoo/odoo-12.0/data
 ;db_name=pos
+db_host = postgresql
 db_port = 5432
 db_user = odoo
 db_password = odoo
